# characteristics_method

./: 1.js  Cargo.toml  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: index.ts
public/: index.sass
src/: characteristics_method.rs  common_method.rs  function_input.rs  lib.rs  main.rs  numeric_input.rs  util.rs  visuals.rs
src/html/: animation.rs  event_target.rs  mod.rs  util.rs
src/inputs/: functional.rs  mod.rs  numeric.rs
src/method/: characteristics.rs  display.rs  mod.rs
src/params/: constant.rs  mod.rs  variable.rs
src/visuals/: line_visuals.rs
static/: index.html
tests/: app.rs
