[package]
name = "characteristics-method"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["ZetaNumbers <zeta0.114942@gmail.com>"]
readme = "README.md"
edition = "2018"

[profile.release]
lto = true

# [features]
# default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.73"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "Window",
    "Document",
    "Performance",
    "Element",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]
